<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactmeActivity">

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,VisualLintTextFieldSize" />
    <EditText
        android:id="@+id/editText_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/editText_name"
        tools:ignore="MissingConstraints,VisualLintTextFieldSize" />
    <EditText
        android:id="@+id/editText_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:hint="@string/message"
        android:inputType="textMultiLine"
        android:minHeight="98dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email"
        tools:ignore="MissingConstraints,VisualLintTextFieldSize" />

    <Button

        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_message" />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="250sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />


    <ImageView
        android:id="@+id/insta_img"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/insta_img"
        app:layout_constraintEnd_toStartOf="@+id/linkedin_img"
        app:layout_constraintTop_toBottomOf="@+id/space" />

    <ImageView
        android:id="@+id/x_img"
        android:layout_width="42dp"
        android:layout_height="42dp"

        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/x_image"
        app:layout_constraintStart_toEndOf="@+id/linkedin_img"
        app:layout_constraintTop_toBottomOf="@+id/space" />

    <ImageView
        android:id="@+id/linkedin_img"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/linkedin_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space" />


</androidx.constraintlayout.widget.ConstraintLayout>